--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.22.3",
+    "sonner": "^1.4.41",
+    "sooner": "^1.1.4",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
