--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sonner": "^1.4.41",
     "sooner": "^1.1.1",
     "sort-by": "^0.0.2",
+    "use-mask-input": "^3.3.7",
     "zod": "^3.23.4"
   },
   "devDependencies": {
